Change from EclipseLink to Hibernate as the NoSQL JPA implementation
 * Followed the documentation at
   https://docs.jboss.org/hibernate/stable/ogm/reference/en-US/html_single
 * Used FongoDB as an in-memory java implementation of MongoDB
