# apidocs/swagger.json
@@ -62,9 +62,9 @@
           "in" : "path",
           "description" : "taskId",
           "required" : true,
-          "type" : "integer",
-          "format" : "int64",
-          "x-example" : 1
+          "type" : "string",
+          "format" : "uuid",
+          "x-example" : "9781337a-a4f6-4ee9-b7b2-2c001d8d457d"
         } ],
         "responses" : {
           "200" : {
@@ -89,16 +89,16 @@
           "in" : "path",
           "description" : "taskId",
           "required" : true,
-          "type" : "integer",
-          "format" : "int64",
-          "x-example" : 1
+          "type" : "string",
+          "format" : "uuid",
+          "x-example" : "9781337a-a4f6-4ee9-b7b2-2c001d8d457d"
         }, {
           "in" : "body",
           "name" : "body",
           "description" : "payload",
           "required" : true,
           "schema" : {
-            "$ref" : "#/definitions/Task Entity"
+            "$ref" : "#/definitions/A new task"
           }
         } ],
         "responses" : {
@@ -121,9 +121,9 @@
           "in" : "path",
           "description" : "taskId",
           "required" : true,
-          "type" : "integer",
-          "format" : "int64",
-          "x-example" : 1
+          "type" : "string",
+          "format" : "uuid",
+          "x-example" : "9781337a-a4f6-4ee9-b7b2-2c001d8d457d"
         } ],
         "responses" : {
           "204" : {
@@ -151,9 +151,9 @@
       "type" : "object",
       "properties" : {
         "id" : {
-          "type" : "integer",
-          "format" : "int64",
-          "example" : 1
+          "type" : "string",
+          "format" : "uuid",
+          "example" : "3d7a2dc5-e8b3-48c2-8e3d-b1ed7882a082"
         },
         "description" : {
           "type" : "string",
